Fixed horizontal scroll bar flashing due to glitch text

--- a/src/components/Landing/style.css
+++ b/src/components/Landing/style.css
@@ -91,7 +91,7 @@ button {
 }
 
 .glitch {
-  width: 90%;
+  width: 70%;
   animation: glitch 1s linear infinite;
 }
 
